--- a/DrMoradi/appsettings.Development.json
+++ b/DrMoradi/appsettings.Development.json
@@ -1,6 +1,14 @@
 {
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "MyProject": "Information",
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
     "WriteTo": [
       {
         "Name": "File",
@@ -14,8 +22,17 @@
         "Name": "Seq",
         "Args": {
           "serverUrl": "http://localhost:5341",
+          "restrictedToMinimumLevel": "Information",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] ({SourceContext}.{Method}) {Message}{NewLine}{Exception}"
-        }
+        },
+        "Filter": [
+          {
+            "Name": "ByIncludingOnly",
+            "Args": {
+              "expression": "StartsWith(SourceContext, 'DrMoradi')"
+            }
+          }
+        ]
       }
     ]
   }
